--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appMap",
+  "name": "app-map",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -21,7 +21,8 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@capacitor/core": "6.2.1",
+    "@capacitor/core": "^7.2.0",
+    "@capacitor/geolocation": "^7.1.1",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
