--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/core": "^7.2.0",
     "@capacitor/geolocation": "^7.1.1",
     "@ionic/angular": "^8.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
